# build-net

./: .env.example  .gitignore  BashNotesForProfessionals.txt  Makefile  README.md  cli.py  cloud.py  data_set_list.txt  install.sh  main.py  models.py  os-setup-tools.json  processor.py  project_meta.v1.yaml  pyproject.toml  requirements.txt  techlist.data  temporary-storage.json
.github/workflows/: python-ci.yml
docs/: BashNotesForProfessionals.txt
utils/: cloud.py
